Fix BigMenu tile alignement

--- a/src/StartingamesSettings/StartingamesSettings.module.scss
+++ b/src/StartingamesSettings/StartingamesSettings.module.scss
@@ -42,7 +42,7 @@
     background-color: $color1;
     border-radius: 30px;
     box-shadow: 1px 1px 15px $colorShadow;
-    margin: auto;
+    margin: 0 auto;
 
     display:flex;
     flex-direction: column;
@@ -74,6 +74,7 @@
 }
 
 .bigMenuButtonWrapper {
+    display: flex;
     padding: 10px 0px;
 }
 
